--- a/CareConnectApp/Shared/NavMenu.razor
+++ b/CareConnectApp/Shared/NavMenu.razor
@@ -25,8 +25,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Client/Details">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Client Details
+            <NavLink class="nav-link" href="/Client">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Client
             </NavLink>
         </div>
     </nav>
